retrieveUnpackaged/objects/ServiceContract__c.object
<CustomObject>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>Contract Header/ VBAK-VBELN (Sales Document) /</description>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContractTypeDesc__c</fullName>
        <description>/ description of contract type</description>
        <label>Contract Type Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>Contract Header / VBAK-AUART /</description>
        <label>Contract Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Contract Header / VBAK-WAERK /</description>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>/</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>/</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipName>ServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <description>Contract Header / VBAK-VKORG /</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapCustomerNumber__c</fullName>
        <description>Contract Header / VBAK-KUNNR / Sold-to party number (= patient ID or account ID). In 99% of the cases is it the Patient. This field is not used.</description>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Service Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContractType__c</columns>
        <columns>Patient__c</columns>
        <columns>SalesOrg__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>